# rm_decision

./: README.md
src/configure/: CMakeLists.txt  package.xml
src/configure/dynamic_configure/: serial.cfg
src/nexus_4wd_mecanum_description/launch/: nexus_4wd_mecanum_description.launch
src/nexus_4wd_mecanum_description/urdf/: nexus_4wd_mecanum.gazebo  nexus_4wd_mecanum.xacro
src/nexus_4wd_mecanum_gazebo/launch/: nexus_4wd_mecanum_world.launch
src/rf2o_laser_odometry/: CMakeLists.txt  package.xml
src/rf2o_laser_odometry/include/rf2o_laser_odometry/: CLaserOdometry2D.h
src/rf2o_laser_odometry/launch/: rf2o_laser_odometry.launch
src/rf2o_laser_odometry/src/: CLaserOdometry2DNode.cpp
src/rm_decision/: CMakeLists.txt  my_tree.xml  package.xml
src/rm_decision/include/rm_decision/: move_base.hpp  patrol.hpp  rm_decision_node.hpp
src/rm_decision/launch/: decision.launch
src/rm_decision/msg/: SerialReceiveMsg.msg
src/rm_decision/src/: rm_decision_main.cpp  rm_decision_node.cpp
src/rm_interfaces/: CMakeLists.txt  package.xml
src/rm_interfaces/msg/: SerialReceiveMsg.msg
src/rmus_map_2/urdf/: materials.xacro  rmus_map_2.urdf
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/config/: joint_names_RM_AI_ROBOT2020.yaml  red_1.rviz  robot_joint_controller.yaml
src/robot_description/launch/: controller_spawn.launch  display.launch  gazebo.launch  spawn.launch
src/robot_description/meshes/: laser.STL  laser.dae
src/robot_description/urdf/: RM_AI_ROBOT2020.csv  robot_description_rm20.xacro
src/robot_gazebo/: CMakeLists.txt  package.xml
src/robot_gazebo/config/: costmap_common_params.yaml  costmap_global.yaml  costmap_local.yaml  dwa_local_planner_params.yaml  ekf_wheelodom_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml  teb_local_planner_params_2.yaml
src/robot_gazebo/launch/: gazebo.launch  gmapping.launch  joy_teleop.launch  nav.rviz  navigation.launch  new_gmapping.rviz  rtab.launch  slam_gmapping.launch
src/robot_gazebo/map/: map.pgm  map.yaml  my_map.pgm  my_map.yaml  rm_map.pgm  rm_map.yaml
src/robot_gazebo/scripts/: imu_modify.py  joy_teleop.py
src/robot_gazebo/worlds/: 2023_v_4_1.world
src/serial/: CMakeLists.txt  package.xml
src/serial/src/: serial.cpp
