<?xml version="1.0"?>
<package>
  <name>robot_gazebo</name>
  <version>0.0.0</version>
  <description>The robot_gazebo package</description>


  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>ros_controllers</run_depend>
  <run_depend>ros_control</run_depend>
  <run_depend>gazebo_ros_control</run_depend>


  <export>
    <gazebo_ros gazebo_model_path="${prefix}/.." />
  </export>
</package>
